--- a/templates/test-stack/template.yaml
+++ b/templates/test-stack/template.yaml
@@ -7,3 +7,6 @@ Resources:
     Metadata:
       foo: !Ref FooValue
     Type: AWS::S3::Bucket
+    Properties:
+      VersioningConfiguration:
+        Status: Enabled
